--- a/16janv/css/style.css
+++ b/16janv/css/style.css
@@ -13,3 +13,18 @@ main ul{
 li{
     list-style: none;
 }
+
+#popin {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    text-align: center;
+    background: #ffffffb8;
+}
+
+#popin.open{
+    display: initial;
+}
